// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders patient care plan suggestion (concern) 1`] = `
<div
  className="carePlanSuggestion"
>
  <div
    className="carePlanSuggestionType"
  >
    Suggested concern
  </div>
  <div
    className="carePlanSuggestionTitleRow"
  >
    <div
      className="carePlanSuggestionConcernTitle"
    >
      Concern Title
    </div>
    <div
      className="carePlanSuggestionActionButtons"
    >
      <div
        className="rejectButton"
        onClick={[Function]}
      />
      <div
        className="acceptButton"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="carePlanSuggestionMetaRow"
  >
    <div
      className="carePlanSuggestionSmallLabel"
    >
      Suggested:
    </div>
    <div
      className="carePlanSuggestionSmallDate"
    >
      <span>
        Aug 16, 2017
      </span>
    </div>
  </div>
</div>
`;

exports[`renders patient care plan suggestion (goal) 1`] = `
<div
  className="carePlanSuggestion"
>
  <div
    className="carePlanSuggestionType"
  >
    Suggested goal
  </div>
  <div
    className="carePlanSuggestionTitleRow"
  >
    <div
      className="carePlanSuggestionGoalTitle"
    >
      Goal Title
    </div>
    <div
      className="carePlanSuggestionActionButtons"
    >
      <div
        className="rejectButton"
        onClick={[Function]}
      />
      <div
        className="acceptButton"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="carePlanSuggestionMetaRow largerMargin"
  >
    <div
      className="carePlanSuggestionSmallLabel"
    >
      Suggested:
    </div>
    <div
      className="carePlanSuggestionSmallDate"
    >
      <span>
        Aug 16, 2017
      </span>
    </div>
  </div>
  <div
    className="taskTemplateRow highPriority"
  >
    <div
      className="taskTemplateTitle"
    >
      Task Title
    </div>
    <div
      className="taskTemplateInfoControls"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1 icon avatar small"
        focusable="false"
        onClick={undefined}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
      <div
        className="taskTemplateDueDate"
      >
        <div
          className="taskTemplateDueDateLabel"
        >
          Due:
        </div>
        <div
          className="taskTemplateDueDateText"
        >
          <span>
            Jul 26, 2017
          </span>
        </div>
      </div>
      <div
        className="taskTemplateRejectButton"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
